[package]
name = "rosbagreader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
rosbag = "0.6.3"

[profile.devplus]
inherits = "dev"
opt-level = 3
debug = false
lto = true
overflow-checks = false
debug-assertions = false
codegen-units = 16
